--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "format": "prettier --write .",
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged",
+    "lint": "eslint .",
+    "commitlint": "commitlint",
+    "stylelint": "stylelint ./src/**/*.{css,scss,less}"
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
@@ -20,6 +25,9 @@
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
+    "@commitlint/types": "^18.4.4",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -27,10 +35,26 @@
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.55.0",
+    "eslint-config-ali": "^14.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "husky": "^8.0.3",
     "less": "^4.2.0",
+    "lint-staged": "^15.2.0",
+    "postcss-less": "^6.0.0",
+    "prettier": "^3.1.1",
+    "stylelint": "^16.1.0",
+    "stylelint-less": "^3.0.1",
+    "stylelint-order": "^6.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json}": [
+      "npm run lint -s --"
+    ],
+    "src/**/*.{css,scss,less}": [
+      "npm run stylelint -s --"
+    ]
   }
 }
